Media Preview -Fixed issue with progress indicator using Alfresco.util.message component not referenced in the preview page. Removed for now as the information is redundant, you see the progress via the graphic indicator bar. -Fixed zoom button, replaced them with text buttons for better align.
git-svn-id: https://share-extras.googlecode.com/svn/trunk/Media Preview@1059 a3f5c567-fd0f-3a89-9b71-a290c5a5f590

--- a/source/web/extras/components/preview/pdfjs/pdfviewer.css
+++ b/source/web/extras/components/preview/pdfjs/pdfviewer.css
@@ -54,6 +54,7 @@ body {
 	border-style: solid;
 	border-width: 1px;
 	background-color: transparent;
+	margin-right: -1px;
 }
 #controls > button:hover {
 	background-image: url(../../../../themes/default/images/sprite.png);
@@ -73,6 +74,11 @@ body {
 
 #controls > button[disabled] > img {
   opacity: 0.5;
+}
+
+.zoombutton {
+	font-weight: bold;
+	color: #3B5D8C;
 }
 
 #pageNumber {
